--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,31 +8,39 @@
     <title>Damien Costa - Portfólio</title>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
-    <div class="container">
-        <header class="cabecalho">
-            <div class="profile">
-                <img class="profile-pic" src="https://github.com/mienblack.png" alt="damienCostaFotoDePerfil">
-                <div class="profile-title">
-                <h1>Damien Felipe da Costa Pereira</h1>
-                <h3>Estudante de desenvolvimento Front-end</h3>
-                </div>
-            </div>
-            <div class="theme">
-                <button onclick="mudarTema()">Alterar Tema</button>
-            </div>
-        </header>
 
-        <main class="project">
-            <ul class="project-list">Projetos Imersão Dev 09/2022
-                <li>🪙<a href="../Aula02/index.html" target="_blank">Conversor de moeda</a></li>
-                <li>🎞️<a href="../Aula05/index.html" target="_blank">AluraFlix</a></li>
-                <li>🃏<a href="../Aula08/index.html" target="_blank">SuperTrunfo</a></li>
+<body>
+    <header class="cabecalho">
+        <nav>
+            Web Developer
+            <ul>
+                <li>Home</li>
+                <li>About</li>
+                <li>Portfolio</li>
+                <li>
+                    <ul>
+                        <li>Linkdin</li>
+                        <li>Github</li>
+                    </ul>
+                </li>
+                <li>Contact</li>
             </ul>
-                
-        </main>
-    </div>
+        </nav>
+        <div>
+            <p></p>
+        </div>
+    </header>
+
+    <main class="project">
+        <ul class="project-list">Pr
+        </ul>
+
+    </main>
+    <footer>
+
+    </footer>
 
     <script src="./scripts/script.js"></script>
 </body>
+
 </html>
