--- a/index.html
+++ b/index.html
@@ -12,30 +12,38 @@
 <body>
     <header class="cabecalho">
         <nav>
-            Web Developer
-            <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Portfolio</li>
-                <li>
-                    <ul>
-                        <li>Linkdin</li>
-                        <li>Github</li>
-                    </ul>
-                </li>
-                <li>Contact</li>
+            <ul class="social">
+                <li><a href="https://www.instagram.com/mien.fe/" target="_blank"><img src="./imagens/instagram-icon.webp" alt="icone do instagram"></a></li>
+                <li><a href="https://www.linkedin.com/in/damien-costa-969953164/" target="_blank"><img src="./imagens/linkedin-icon.png" alt="ícone do linkedin"></a></li>
+                <li><a href="https://github.com/mienblack" target="_blank"><img src="./imagens/github-icon.png" alt="ícone do github"></a></li>
+            </ul>
+            <ul id="nav-list">
+                <li><a href="#about">Quem Sou</a></li>
+                <li><a href="#project">Portfolio</a></li>
+                <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
-        <div>
-            <p></p>
-        </div>
-    </header>
 
-    <main class="project">
-        <ul class="project-list">Pr
+    </header>
+    <div id="about">
+        <img src="./imagens/IMG_20220129_122027_430.jpg" alt="">
+        <div id="about-text">
+            <p class="firstP">Olá, sou Damien Felipe</p>
+            <p class="secondP">Desenvolvedor Front-end</p>
+            <p class="thirdP"></p>
+        </div>
+    </div>
+
+    <main id="project">
+        <h1>Meu Portfólio</h1>
+        <ul class="project-list">
+            <li>Jogo da Memória</li>
         </ul>
 
     </main>
+    <div id="contact">
+        <form action=""></form>
+    </div>
     <footer>
 
     </footer>
