jogo da memoria

--- a/index.html
+++ b/index.html
@@ -36,9 +36,26 @@
 
     <main id="project">
         <h1>Meu Portfólio</h1>
-        <ul class="project-list">
-            <li>Jogo da Memória</li>
-        </ul>
+        <div class="project-list">
+            <a href="">
+                <figure>
+                    <img src="./imagens/memory-game.png" alt="memory-game">
+                    <figcaption>Jogo da memória</figcaption>
+                </figure>
+            </a>
+            <a href="">
+                <figure>
+                    <img src="" alt="jogo-da-velha">
+                    <figcaption>Jogo da Velha</figcaption>
+                </figure>
+            </a>
+            <a href="">
+                <figure>
+                    <img src="" alt="super-trunfo-pokemon">
+                    <figcaption>Super Trunfo Pokémon</figcaption>
+                </figure>
+            </a>
+        </div>
 
     </main>
     <div id="contact">
