--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header class="cabecalho">
         <nav>
             <ul class="social">
-                <li><a href="https://www.instagram.com/mien.fe/" target="_blank"><img src="./imagens/instagram-icon.webp" alt="icone do instagram"></a></li>
-                <li><a href="https://www.linkedin.com/in/damien-costa-969953164/" target="_blank"><img src="./imagens/linkedin-icon.png" alt="ícone do linkedin"></a></li>
-                <li><a href="https://github.com/mienblack" target="_blank"><img src="./imagens/github-icon.png" alt="ícone do github"></a></li>
+                <li><a href="https://www.instagram.com/mien.fe/" target="_blank"><img src="./images/instagram-icon.webp" alt="icone do instagram"></a></li>
+                <li><a href="https://www.linkedin.com/in/damien-costa-969953164/" target="_blank"><img src="./images/linkedin-icon.png" alt="ícone do linkedin"></a></li>
+                <li><a href="https://github.com/mienblack" target="_blank"><img src="./images/github-icon.png" alt="ícone do github"></a></li>
             </ul>
             <ul id="nav-list">
                 <li><a href="#about">Quem Sou</a></li>
@@ -26,7 +26,7 @@
 
     </header>
     <div id="about">
-        <img src="./imagens/IMG_20220129_122027_430.jpg" alt="">
+        <img src="./images/IMG_20220129_122027_430.jpg" alt="">
         <div id="about-text">
             <p class="firstP">Olá, sou Damien Felipe</p>
             <p class="secondP">Desenvolvedor Front-end</p>
@@ -37,15 +37,15 @@
     <main id="project">
         <h1>Meu Portfólio</h1>
         <div class="project-list">
-            <a href="">
+            <a href="https://mienblack.github.io/jogo-da-memoria/">
                 <figure>
-                    <img src="./imagens/memory-game.png" alt="memory-game">
+                    <img src="./images/memory-game.png" alt="memory-game">
                     <figcaption>Jogo da memória</figcaption>
                 </figure>
             </a>
-            <a href="">
+            <a href="https://mienblack.github.io/jogo-da-velha/">
                 <figure>
-                    <img src="" alt="jogo-da-velha">
+                    <img src="./images/jogo-da-velha.png" alt="jogo-da-velha">
                     <figcaption>Jogo da Velha</figcaption>
                 </figure>
             </a>
