--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Damien Costa - Portfólio</title>
+    <link rel="shortcut icon" href="./images/mienDesenho.png" type="image/png">
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 
@@ -37,22 +38,22 @@
     <main id="project">
         <h1>Meu Portfólio</h1>
         <div class="project-list">
-            <a href="https://mienblack.github.io/jogo-da-memoria/">
+            <a href="https://mienblack.github.io/jogo-da-memoria/" title="Jogo da memória">
                 <figure>
                     <img src="./images/memory-game.png" alt="memory-game">
                     <figcaption>Jogo da memória</figcaption>
                 </figure>
             </a>
-            <a href="https://mienblack.github.io/jogo-da-velha/">
+            <a href="https://mienblack.github.io/jogo-da-velha/" title="Jogo da velha">
                 <figure>
                     <img src="./images/jogo-da-velha.png" alt="jogo-da-velha">
                     <figcaption>Jogo da Velha</figcaption>
                 </figure>
             </a>
-            <a href="">
+            <a href="https://rocketpay-ten-gamma.vercel.app/" title="Rocketpay">
                 <figure>
-                    <img src="" alt="super-trunfo-pokemon">
-                    <figcaption>Super Trunfo Pokémon</figcaption>
+                    <img src="./images/rocketpay.png" alt="rocketpay">
+                    <figcaption>Rocketpay</figcaption>
                 </figure>
             </a>
         </div>
