--- a/index.html
+++ b/index.html
@@ -1,129 +1,107 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Damien Costa - Portfólio</title>
-    <link
-      rel="shortcut icon"
-      href="./images/mienDesenho.png"
-      type="image/png"
-    />
-    <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="stylesheet" href="./styles/responsivo.css">
-  </head>
 
-  <body>
-    <header class="cabecalho">
-      <nav>
-        <ul class="social">
-          <li>
-            <a href="https://www.instagram.com/mien.fe/" target="_blank"
-              ><img src="./images/instagram-icon.webp" alt="icone do instagram"
-            /></a>
-          </li>
-          <li>
-            <a
-              href="https://www.linkedin.com/in/damien-costa-969953164/"
-              target="_blank"
-              ><img src="./images/linkedin-icon.png" alt="ícone do linkedin"
-            /></a>
-          </li>
-          <li>
-            <a href="https://github.com/mienblack" target="_blank"
-              ><img src="./images/github-icon.png" alt="ícone do github"
-            /></a>
-          </li>
-        </ul>
-        <ul id="nav-list">
-          <li><a href="#about">Quem Sou</a></li>
-          <li><a href="#project">Portfólio</a></li>
-          <!--<li><a href="#contact">Contato</a></li>-->
-        </ul>
-      </nav>
-    </header>
-    <div id="about">
-      <img src="./images/IMG_20220129_122027_430.jpg" alt="" />
-      <div id="about-text">
-        <p class="firstP">Olá, sou Damien Felipe</p>
-        <p class="secondP">Desenvolvedor Front-end</p>
-        <p class="thirdP">Atualmente focado em projetos web</p>
-      </div>
-    </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Damien Felipe - Portfólio</title>
+  <link rel="shortcut icon" href="./images/mienDesenho.png" type="image/png" />
+  <link rel="stylesheet" href="./styles/style.css" />
+  <link rel="stylesheet" href="./styles/responsivo.css">
+</head>
 
-    <section id="techs">
-      <h1>Minhas habilidades</h1>
-      <ul class="divTechs">
+<body>
+  <header class="cabecalho">
+    <nav>
+      <ul class="social">
         <li>
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain.svg"
-            title="HTML"
-          />
+          <a href="https://www.linkedin.com/in/damien-costa-969953164/" target="_blank"><img
+              src="./images/linkedin-icon.png" alt="ícone do linkedin" /></a>
         </li>
         <li>
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg"
-            title="CSS"
-          />
-        </li>
-        <li>
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg"
-            title="Javascript"
-          />
-        </li>
-        <li>
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg"
-            title="GIT"
-          />
-        </li>
-        <li>
-          <img
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg"
-            title="Firebase"
-          />
+          <a href="https://github.com/mienblack" target="_blank"><img src="./images/github-icon.png"
+              alt="ícone do github" /></a>
         </li>
       </ul>
-    </section>
+      <ul id="nav-list">
+        <li><a href="#about">Quem Sou</a></li>
+        <li><a href="#project">Portfólio</a></li>
+        <!--<li><a href="#contact">Contato</a></li>-->
+      </ul>
+    </nav>
+  </header>
+  <div id="about">
+    <img src="./images/IMG_20220129_122027_430.jpg" alt="" />
+    <div id="about-text">
+      <p class="firstP">Olá, sou Damien Felipe</p>
+      <p class="secondP">Desenvolvedor Front-end</p>
+    </div>
+  </div>
 
-    <main id="project">
-      <h1>Meu Portfólio</h1>
-      <div class="project-list">
-        <a
-          href="https://rocketpay-ten-gamma.vercel.app/"
-          title="Rocketpay"
-          target="_blank"
-        >
-          <figure>
-            <img src="./images/rocketpay.png" alt="rocketpay" />
-            <figcaption>Rocketpay</figcaption>
-          </figure>
-        </a>
-        <a
-          href="https://mienblack.github.io/jogo-da-memoria/"
-          title="Jogo da memória"
-          target="_blank"
-        >
-          <figure>
-            <img src="./images/memory-game.png" alt="memory-game" />
-            <figcaption>Jogo da memória</figcaption>
-          </figure>
-        </a>
-        <a
-          href="https://mienblack.github.io/jogo-da-velha/"
-          title="Jogo da velha"
-          target="_blank"
-        >
-          <figure>
-            <img src="./images/jogo-da-velha.png" alt="jogo-da-velha" />
-            <figcaption>Jogo da Velha</figcaption>
-          </figure>
-        </a>
-      </div>
-    </main>
-    <!--
+  <section id="techs">
+    <h1>Minhas habilidades</h1>
+    <ul class="divTechs">
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain.svg" title="HTML" />
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" title="CSS" />
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg"
+          title="Javascript" />
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" title="Reactjs" />
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" title="Nodejs"/>
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" title="Nextjs"/>
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" title="GIT" />
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" title="Firebase" />
+      </li>
+    </ul>
+  </section>
+
+  <main id="project">
+    <h1>Meu Portfólio</h1>
+    <div class="project-div">
+      <a href="https://afroplay.vercel.app/" title="AfroPlay" target="_blank">
+        <figure>
+          <img src="./images/AfroPlay.png" alt="AfroPlay" />
+          <figcaption>AfroPlay</figcaption>
+        </figure>
+      </a>
+      <a href="https://rocketpay-ten-gamma.vercel.app/" title="Rocketpay" target="_blank">
+        <figure>
+          <img src="./images/rocketpay.png" alt="rocketpay" />
+          <figcaption>Rocketpay</figcaption>
+        </figure>
+      </a>
+    </div>
+    <div class="project-div">
+      <a href="https://mienblack.github.io/blog/" title="blog" target="_blank">
+        <figure>
+          <img src="./images/blog.png" alt="blog" />
+          <figcaption>blog</figcaption>
+        </figure>
+      </a>
+      <a href="https://mienblack.github.io/jogo-da-velha/" title="Jogo da velha" target="_blank">
+        <figure>
+          <img src="./images/jogo-da-velha.png" alt="jogo-da-velha" />
+          <figcaption>Jogo da Velha</figcaption>
+        </figure>
+      </a>
+    </div>
+  </main>
+  <!--
     <div id="contact">
         <h1>Fale Comigo</h1>
       <form class="form" method="post" action="./email.php">
@@ -135,28 +113,21 @@
       </form>
     </div>
     -->
-    <footer>
-        <ul class="social">
-            <li>
-              <a href="https://www.instagram.com/mien.fe/" target="_blank"
-                ><img src="./images/instagram-icon.webp" alt="icone do instagram"
-              /></a>
-            </li>
-            <li>
-              <a
-                href="https://www.linkedin.com/in/damien-costa-969953164/"
-                target="_blank"
-                ><img src="./images/linkedin-icon.png" alt="ícone do linkedin"
-              /></a>
-            </li>
-            <li>
-              <a href="https://github.com/mienblack" target="_blank"
-                ><img src="./images/github-icon.png" alt="ícone do github"
-              /></a>
-            </li>
-          </ul>
-    </footer>
+  <footer>
+    <div class="div-email"><img class="email" alt="email" src="./images/email.png"/><p>damienfelipe2015@gmail.com</p></div>
+    <ul class="social">
+      <li>
+        <a href="https://www.linkedin.com/in/damien-costa-969953164/" target="_blank"><img
+            src="./images/linkedin-icon.png" alt="ícone do linkedin" /></a>
+      </li>
+      <li>
+        <a href="https://github.com/mienblack" target="_blank"><img src="./images/github-icon.png"
+            alt="ícone do github" /></a>
+      </li>
+    </ul>
+  </footer>
 
-    <script src="./scripts/script.js"></script>
-  </body>
+  <script src="./scripts/script.js"></script>
+</body>
+
 </html>
