--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav>
       <ul class="social">
         <li>
-          <a href="https://www.linkedin.com/in/damien-costa-969953164/" target="_blank"><img
+          <a href="https://www.linkedin.com/in/damien-costa/" target="_blank"><img
               src="./images/linkedin-icon.png" alt="ícone do linkedin" /></a>
         </li>
         <li>
@@ -117,7 +117,7 @@
     <div class="div-email"><img class="email" alt="email" src="./images/email.png"/><p>damienfelipe2015@gmail.com</p></div>
     <ul class="social">
       <li>
-        <a href="https://www.linkedin.com/in/damien-costa-969953164/" target="_blank"><img
+        <a href="https://www.linkedin.com/in/damien-costa/" target="_blank"><img
             src="./images/linkedin-icon.png" alt="ícone do linkedin" /></a>
       </li>
       <li>
