--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </li>
       </ul>
       <ul id="nav-list">
-        <li><a href="#about">Quem Sou</a></li>
+        <!--<li><a href="#about">Quem Sou</a></li>-->
         <li><a href="#project">Portfólio</a></li>
         <!--<li><a href="#contact">Contato</a></li>-->
       </ul>
@@ -41,6 +41,12 @@
 
   <section id="techs">
     <h1>Minhas habilidades</h1>
+    <div id="description">
+      <p class="d-html"></p>
+      <p class="d-css"></p>
+      <p class="d-js"></p>
+      <p class="d-react"></p>
+    </div>
     <ul class="divTechs">
       <li>
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain.svg" title="HTML" />
@@ -115,7 +121,7 @@
     </ul>
   </footer>
 
-  <script src="./scripts/script.js"></script>
+  <script src="./script.js"></script>
 </body>
 
 </html>
