--- a/index.html
+++ b/index.html
@@ -73,14 +73,18 @@
           <figcaption>AfroPlay</figcaption>
         </figure>
       </a>
+      <a href="https://todo-list-mien.vercel.app/" title="TODO List" target="_blank">
+        <figure>
+          <img src="./images/todo.png" alt="todo" />
+          <figcaption>TODO List</figcaption>
+        </figure>
+      </a>
       <a href="https://rocketpay-ten-gamma.vercel.app/" title="Rocketpay" target="_blank">
         <figure>
           <img src="./images/rocketpay.png" alt="rocketpay" />
           <figcaption>Rocketpay</figcaption>
         </figure>
       </a>
-    </div>
-    <div class="project-div">
       <a href="https://mienblack.github.io/blog/" title="blog" target="_blank">
         <figure>
           <img src="./images/blog.png" alt="blog" />
