--- a/index.html
+++ b/index.html
@@ -67,19 +67,19 @@
   <main id="project">
     <h1>Meu Portfólio</h1>
     <div class="project-div">
-      <a href="https://afroplay.vercel.app/" title="AfroPlay" target="_blank">
+      <!--<a href="https://afroplay.vercel.app/" title="AfroPlay" target="_blank">
         <figure>
           <img src="./images/AfroPlay.png" alt="AfroPlay" />
           <figcaption>AfroPlay</figcaption>
         </figure>
-      </a>
+      </a>-->
       <a href="https://todo-list-mien.vercel.app/" title="TODO List" target="_blank">
         <figure>
           <img src="./images/todo.png" alt="todo" />
           <figcaption>TODO List</figcaption>
         </figure>
       </a>
-      <a href="https://rocketpay-ten-gamma.vercel.app/" title="Rocketpay" target="_blank">
+      <a href="https://rocketpay-mien.vercel.app/" title="Rocketpay" target="_blank">
         <figure>
           <img src="./images/rocketpay.png" alt="rocketpay" />
           <figcaption>Rocketpay</figcaption>
