--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav>
       <ul class="social">
         <li>
-          <a href="https://www.linkedin.com/in/damien-costa/" target="_blank"><img
-              src="./images/linkedin-icon.png" alt="ícone do linkedin" /></a>
+          <a href="https://www.linkedin.com/in/damien-costa/" target="_blank"><img src="./images/linkedin-icon.png"
+              alt="ícone do linkedin" /></a>
         </li>
         <li>
           <a href="https://github.com/mienblack" target="_blank"><img src="./images/github-icon.png"
@@ -62,17 +62,31 @@
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" title="Reactjs" />
       </li>
     </ul>
+    <ul class="divTechs">
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" title="Nodejs" />
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" title="Nextjs" />
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" title="MongoDB" />
+      </li>
+      <li>
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" title="Firebase" />
+      </li>
+    </ul>
   </section>
 
   <main id="project">
     <h1>Meu Portfólio</h1>
     <div class="project-div">
-      <!--<a href="https://afroplay.vercel.app/" title="AfroPlay" target="_blank">
+      <a href="https://afroplay.vercel.app/" title="AfroPlay" target="_blank">
         <figure>
           <img src="./images/AfroPlay.png" alt="AfroPlay" />
           <figcaption>AfroPlay</figcaption>
         </figure>
-      </a>-->
+      </a>
       <a href="https://todo-list-mien.vercel.app/" title="TODO List" target="_blank">
         <figure>
           <img src="./images/todo.png" alt="todo" />
@@ -112,11 +126,13 @@
     </div>
     -->
   <footer>
-    <div class="div-email"><img class="email" alt="email" src="./images/email.png"/><p>damienfelipe2015@gmail.com</p></div>
+    <div class="div-email"><img class="email" alt="email" src="./images/email.png" />
+      <p>damienfelipe2015@gmail.com</p>
+    </div>
     <ul class="social">
       <li>
-        <a href="https://www.linkedin.com/in/damien-costa/" target="_blank"><img
-            src="./images/linkedin-icon.png" alt="ícone do linkedin" /></a>
+        <a href="https://www.linkedin.com/in/damien-costa/" target="_blank"><img src="./images/linkedin-icon.png"
+            alt="ícone do linkedin" /></a>
       </li>
       <li>
         <a href="https://github.com/mienblack" target="_blank"><img src="./images/github-icon.png"
