--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Damien Felipe - Portfólio</title>
   <link rel="shortcut icon" href="./images/mienDesenho.png" type="image/png" />
   <link rel="stylesheet" href="./styles/style.css" />
-  <link rel="stylesheet" href="./styles/responsivo.css">
+  <link rel="stylesheet" href="./styles/responsivo.css" />
 </head>
 
 <body>
@@ -126,7 +126,8 @@
     </div>
     -->
   <footer>
-    <div class="div-email"><img class="email" alt="email" src="./images/email.png" />
+    <div class="div-email">
+      <img class="email" alt="email" src="./images/email.png" />
       <p>damienfelipe2015@gmail.com</p>
     </div>
     <ul class="social">
