--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <div class="project-div">
       <a href="https://afroplay.vercel.app/" title="AfroPlay" target="_blank">
         <figure>
-          <img src="./images/AfroPlay.png" alt="AfroPlay" />
+          <img src="./images/afroplay.png" alt="AfroPlay" />
           <figcaption>AfroPlay</figcaption>
         </figure>
       </a>
