--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </a>
       <a href="https://todo-list-mien.vercel.app/" title="TODO List" target="_blank">
         <figure>
-          <img src="./images/todo.png" alt="todo" />
+          <img src="./images/todo_list.png" alt="todo" />
           <figcaption>TODO List</figcaption>
         </figure>
       </a>
