--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
           <figcaption>TODO List</figcaption>
         </figure>
       </a>
+      <a href="https://pokenext-mien.vercel.app/" title="PokeNext" target="_blank">
+        <figure>
+          <img src="./images/pokenext.png" alt="jogo-da-velha" />
+          <figcaption>PokeNext</figcaption>
+        </figure>
+      </a>
       <a href="https://rocketpay-mien.vercel.app/" title="Rocketpay" target="_blank">
         <figure>
           <img src="./images/rocketpay.png" alt="rocketpay" />
