--- a/index.html
+++ b/index.html
@@ -1,154 +1,52 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" class="h-100">
 
 <head>
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Damien Felipe - Portfólio</title>
+  <title>Damien Felipe</title>
   <link rel="shortcut icon" href="./images/mienDesenho.png" type="image/png" />
-  <link rel="stylesheet" href="./styles/style.css" />
-  <link rel="stylesheet" href="./styles/responsivo.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="./styles/global.css">
 </head>
 
-<body>
-  <header class="cabecalho">
-    <nav>
-      <ul class="social">
-        <li>
-          <a href="https://www.linkedin.com/in/damien-costa/" target="_blank"><img src="./images/linkedin-icon.png"
-              alt="ícone do linkedin" /></a>
-        </li>
-        <li>
-          <a href="https://github.com/mienblack" target="_blank"><img src="./images/github-icon.png"
-              alt="ícone do github" /></a>
-        </li>
-      </ul>
-      <ul id="nav-list">
-        <!--<li><a href="#about">Quem Sou</a></li>-->
-        <li><a href="#project">Portfólio</a></li>
-        <!--<li><a href="#contact">Contato</a></li>-->
-      </ul>
-    </nav>
-  </header>
-  <div id="about">
-    <img src="./images/IMG_20220129_122027_430.jpg" alt="" />
-    <div id="about-text">
-      <p class="firstP">Olá, sou Damien Felipe</p>
-      <p class="secondP">Desenvolvedor Front-end</p>
+<body class="h-100 d-flex justify-content-between w-100">
+  <div class="container d-flex flex-column justify-content-center w-50">
+    <h2>Olá!</h2>
+    <h1>Eu sou, <span class="text-primary">Damien Felipe</span></h1>
+    <h5 class="bg-primary text-light p-1">Desenvolvedor Fullstack</h5>
+    <div class="w-75 justify">
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio quae iusto totam reiciendis hic
+      tenetur illo
+      quis, porro laborum autem quia? Culpa porro delectus id omnis, incidunt magni commodi beatae! Lorem ipsum dolor
+      sit amet consectetur adipisicing elit. Delectus, explicabo sunt asperiores corrupti tenetur molestiae aut. Placeat
+      rerum optio tempore maxime reiciendis maiores veniam quod, incidunt itaque animi distinctio architecto?
     </div>
+    <a href="./about.html"></a>
+    <button class="btn btn-primary mt-3 rounded-5 w-25">Mais sobre mim</button>
   </div>
-
-  <section id="techs">
-    <h1>Minhas habilidades</h1>
-    <div id="description">
-      <p class="d-html"></p>
-      <p class="d-css"></p>
-      <p class="d-js"></p>
-      <p class="d-react"></p>
-    </div>
-    <ul class="divTechs">
-      <li>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-plain.svg" title="HTML" />
-      </li>
-      <li>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain.svg" title="CSS" />
-      </li>
-      <li>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-plain.svg"
-          title="Javascript" />
-      </li>
-      <li>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" title="Reactjs" />
-      </li>
-    </ul>
-    <ul class="divTechs">
-      <li>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" title="Nodejs" />
-      </li>
-      <li>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nextjs/nextjs-original.svg" title="Nextjs" />
-      </li>
-      <li>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" title="MongoDB" />
-      </li>
-      <li>
-        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" title="Firebase" />
-      </li>
-    </ul>
-  </section>
-
-  <main id="project">
-    <h1>Meu Portfólio</h1>
-    <div class="project-div">
-      <a href="https://afroplay.vercel.app/" title="AfroPlay" target="_blank">
-        <figure>
-          <img src="./images/afroplay.png" alt="AfroPlay" />
-          <figcaption>AfroPlay</figcaption>
-        </figure>
-      </a>
-      <a href="https://todo-list-mien.vercel.app/" title="TODO List" target="_blank">
-        <figure>
-          <img src="./images/todo_list.png" alt="todo" />
-          <figcaption>TODO List</figcaption>
-        </figure>
-      </a>
-      <a href="https://pokenext-mien.vercel.app/" title="PokeNext" target="_blank">
-        <figure>
-          <img src="./images/pokenext.png" alt="jogo-da-velha" />
-          <figcaption>PokeNext</figcaption>
-        </figure>
-      </a>
-      <a href="https://rocketpay-mien.vercel.app/" title="Rocketpay" target="_blank">
-        <figure>
-          <img src="./images/rocketpay.png" alt="rocketpay" />
-          <figcaption>Rocketpay</figcaption>
-        </figure>
-      </a>
-      <a href="https://mienblack.github.io/blog/" title="blog" target="_blank">
-        <figure>
-          <img src="./images/blog.png" alt="blog" />
-          <figcaption>blog</figcaption>
-        </figure>
-      </a>
-      <a href="https://mienblack.github.io/jogo-da-velha/" title="Jogo da velha" target="_blank">
-        <figure>
-          <img src="./images/jogo-da-velha.png" alt="jogo-da-velha" />
-          <figcaption>Jogo da Velha</figcaption>
-        </figure>
-      </a>
-    </div>
-  </main>
-  <!--
-    <div id="contact">
-        <h1>Fale Comigo</h1>
-      <form class="form" method="post" action="./email.php">
-        <input class="field" type="text" name="nome" placeholder="nome">
-        <input class="field" type="email" placeholder="email">
-        <input class="field" type="text" placeholder="assunto">
-        <textarea name="mensagem" placeholder="Escreva aqui a sua mensagem" cols="30" rows="10"></textarea>
-        <button type="submit">Enviar contato<img src="./images/send-icon.png"></button>
-      </form>
-    </div>
-    -->
-  <footer>
-    <div class="div-email">
-      <img class="email" alt="email" src="./images/email.png" />
-      <p>damienfelipe2015@gmail.com</p>
-    </div>
-    <ul class="social">
-      <li>
-        <a href="https://www.linkedin.com/in/damien-costa/" target="_blank"><img src="./images/linkedin-icon.png"
-            alt="ícone do linkedin" /></a>
-      </li>
-      <li>
-        <a href="https://github.com/mienblack" target="_blank"><img src="./images/github-icon.png"
-            alt="ícone do github" /></a>
-      </li>
-    </ul>
-  </footer>
-
-  <script src="./script.js"></script>
+  <div class="h-100">
+    <img src="./images/perfil.jpg" alt="perfil" class="img-fluid h-100">
+  </div>
+  <div class="position-absolute end-0 top-50 d-flex flex-column gap-4 translate-middle p-1 rounded-5 bg-primary">
+    <a href="./index.html">
+      <i class="btn bi bi-house-fill"></i>
+    </a>
+    <a href="./about.html">
+      <i class="btn bi bi-person-fill"></i>
+    </a>
+    <a href="./curriculo.html">
+      <i class="btn bi bi-file-richtext"></i>
+    </a>
+    <a href="./portfolio.html">
+      <i class="btn bi bi-suitcase-lg-fill"></i>
+    </a>
+    <a href="./contact.html">
+      <i class="btn bi bi-send-fill"></i>
+    </a>
+  </div>
 </body>
 
 </html>
