--- a/curriculo.html
+++ b/curriculo.html
@@ -14,7 +14,7 @@
 <body class="h-100 d-flex justify-content-start w-100">
     <div class="w-25">
         <div class="h-100 w-75 d-flex flex-column">
-            <img src="./images/perfil.jpg" alt="perfil" class="img-fluid w-100">
+            <img src="./images/perfil_bw.jpg" alt="perfil" class="img-fluid w-100">
             <div class="d-flex flex-column bg-primary flex-fill pt-5 justify-center align-items-center">
                 <a href="./index.html" class="text-light btn mt-3">
                     HOME
