--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <button class="btn btn-primary mt-3 rounded-5 w-25">Mais sobre mim</button>
   </div>
   <div class="h-100">
-    <img src="./images/perfil.jpg" alt="perfil" class="img-fluid h-100">
+    <img src="./images/perfil_bw.jpg" alt="perfil" class="img-fluid h-100">
   </div>
   <div class="position-absolute end-0 top-50 d-flex flex-column gap-4 translate-middle p-1 rounded-5 bg-primary">
     <a href="./index.html">
